# The_SSENs_FLIR_Seeker

./: .gitignore  App.xaml  App.xaml.cs  CONTRIBUTING.md  DbPanel.cs  GraphicOverlayWindow.xaml  GraphicOverlayWindow.xaml.cs  MainWindow.GStreamer.cs  MainWindow.Map.cs  MainWindow.UDP.cs  MainWindow.xaml  MainWindow.xaml.cs  README  README.md  SSNE GUI v2.csproj  SSNE GUI v2.sln  SubOverlayWindow.xaml  SubOverlayWindow.xaml.cs  boot.bif  s  spidev_test
.Xil/XSCT-175514-ubuntu/: zynq_top.bda
.Xil/XSCT-197792-ubuntu/: zynq_top.bda
.Xil/XSCT-215565-ubuntu/: zynq_top.bda
.Xil/XSCT-234866-ubuntu/: zynq_top.bda
.Xil/XSCT-256029-ubuntu/: zynq_top.bda
.petalinux/: metadata
data/FLIR_Sample/: frame_000000.tiff  frame_000001.tiff  frame_000002.tiff  frame_000003.tiff  frame_000004.tiff  frame_000005.tiff  frame_000006.tiff  frame_000007.tiff  frame_000008.tiff  frame_000009.tiff  frame_000010.tiff  frame_000011.tiff  frame_000012.tiff  frame_000013.tiff  frame_000014.tiff  frame_000015.tiff  frame_000016.tiff  frame_000017.tiff  frame_000018.tiff  frame_000019.tiff  frame_000020.tiff  frame_000021.tiff  frame_000022.tiff  frame_000023.tiff  frame_000024.tiff  frame_000025.tiff  frame_000026.tiff  frame_000027.tiff  frame_000028.tiff  frame_000029.tiff  frame_000030.tiff  frame_000031.tiff  frame_000032.tiff  frame_000033.tiff  frame_000034.tiff  frame_000035.tiff  frame_000036.tiff  frame_000037.tiff  frame_000038.tiff  frame_000039.tiff  (+358 more)
data/FLIR_Sample/mp4/: make_video.py
project-spec/configs/: config  rootfs_config
project-spec/hw-description/: ps7_init.c  ps7_init.h  ps7_init.html  ps7_init.tcl  ps7_init_gpl.c  ps7_init_gpl.h  system.xsa  zynq_top_wrapper.bit
project-spec/meta-user/recipes-bsp/device-tree/files/: system-user.dtsi
project-spec/meta-user/recipes-kernel/linux/: linux-xlnx_%.bbappend
project-spec/meta-user/recipes-kernel/linux/linux-xlnx/: user_2025-10-15-07-45-00.cfg  user_2025-10-24-15-27-00.cfg
src/software/: CMakeLists.txt  CMakePresets.json  compile_commands.json
src/software/app/: CMakeLists.txt  guidance_mode.hpp  main.cpp  main_config.hpp  phase_gate.hpp
src/software/app/components/: CMakeLists.txt
src/software/app/components/core/: ActuatorPort.cpp  CsvLoggerAru.cpp  CsvLoggerCtrl.cpp  CsvLoggerIR.cpp  CsvLoggerMeta.cpp  EO_ArucoDetector_OpenCV.cpp  EO_ArucoPreprocessor_OpenCV.cpp  IR_Preprocessor.cpp  IR_Preprocessor_LinNorm.cpp  IR_Tracker_CSRT.cpp  IR_Tracker_KCF.cpp  IR_Tracker_MOSSE.cpp  MetaWire.cpp  ReinitHint_FromLast.cpp  TargetFusion.cpp
src/software/app/components/includes/: ActuatorPort.hpp  ControlDTO.hpp  CsvLoggerAru.hpp  CsvLoggerCtrl.hpp  CsvLoggerIR.hpp  CsvLoggerMeta.hpp  EO_ArucoDetector_OpenCV.hpp  EO_ArucoPreprocessor_OpenCV.hpp  EO_Frame.hpp  IController.hpp  IR_Frame.hpp  IR_Preprocessor.hpp  IR_Preprocessor_LinNorm.hpp  IR_Tracker_CSRT.hpp  IR_Tracker_KCF.hpp  IR_Tracker_MOSSE.hpp  MetaWire.hpp  ReinitHint_FromLast.hpp  TargetFusion.hpp
src/software/app/ipc/: CMakeLists.txt  event_bus.hpp  event_bus_impl.cpp  event_bus_impl.hpp  ipc_types.hpp  mailbox.hpp  wake_condvar.hpp
src/software/app/tests/: CMakeLists.txt  IR_TrackThread_sanity.cpp
src/software/app/threads/: CMakeLists.txt  ControlThread.cpp  EO_ArUcoThread.cpp  EO_CaptureThread.cpp  EO_TxThread.cpp  IR_CaptureThread.cpp  IR_TrackThread.cpp  IR_TxThread.cpp  Meta_TxThread.cpp  Net_RxThread.cpp
src/software/app/threads_includes/: ControlThread.hpp  EO_ArUcoThread.hpp  EO_CaptureThread.hpp  EO_TxThread.hpp  IR_CaptureThread.hpp  IR_TrackThread.hpp  IR_TxThread.hpp  Meta_TxThread.hpp  Net_RxThread.hpp  common.hpp
src/software/app/tools/: CMakeLists.txt
src/software/app/tools/controlthread/: CMakeLists.txt  main_control.cpp
src/software/app/tools/eo_aruco_test/: CMakeLists.txt  eo_aruco_test.cpp
src/software/app/tools/eo_capture_test/: CMakeLists.txt  eo_capture_test.cpp
src/software/app/tools/eo_tx_test/: CMakeLists.txt  eo_tx_test.cpp
src/software/app/tools/except_control/: CMakeLists.txt  except_control.cpp
src/software/app/tools/ir_capture_test/: CMakeLists.txt  README.md  ir_capture_test.cpp
src/software/app/tools/ir_thread/: ir_thread_gui.cpp
src/software/app/tools/ir_trackthread/: CMakeLists.txt  ir_thread_gui.cpp
src/software/app/tools/ir_tx_test/: CMakeLists.txt  ir_tx_test.cpp
src/software/app/tools/meta_txthread/: CMakeLists.txt  main_meta_txthread.cpp
src/software/app/tools/net_rx_test/: CMakeLists.txt  README.md  net_rx_test.cpp
src/software/app/tools/net_rx_test/windows_client/: run_simple_click_sender.bat  simple_click_sender.py
src/software/app/tools/rxtx/: CMakeLists.txt  rxtx_test.cpp
src/software/app/tools/rxtxtrack/: CMakeLists.txt  rxtxtrack_test.cpp
src/software/app/util/: common_log.hpp  csv_sink.cpp  csv_sink.hpp  telemetry.hpp  time_util.hpp
src/software/project/ipc/: event_bus.hpp  wake.hpp
src/software/project/threads/: ControlThread.cpp  Meta_TxThread.cpp
src/software/project/threads_includes/: ControlThread.hpp  EO_ArUcoThread.hpp  IR_TrackThread.hpp  Meta_TxThread.hpp
